--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.9",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.7.2",
+    "sierra-library": "^2.0.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.6.2",
     "vue-loader": "^12.2.2",
