--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "prod": "NODE_ENV=production webpack -p",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,9 +23,11 @@
     "node-dijkstra": "1.1.3"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
-    "sass-loader": "^6.0.6",
+    "gh-pages": "^1.1.0",
     "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "sierra-library": "^2.0.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.6.2",
