--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "author": "Simon Kvasnicka",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.17.1",
+    "fuse.js": "^3.2.0",
+    "node-dijkstra": "1.1.3",
     "vue": "^2.5.2",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "fuse.js": "^3.2.0",
-    "node-dijkstra": "1.1.3"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.3.1",
